--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     permissions:
       contents: read
       packages: write
@@ -17,8 +16,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up QEMU emulation
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: linux/amd64,linux/arm64
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          install: true
+
+      - name: Inspect and bootstrap builder
+        run: docker buildx inspect --bootstrap
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -34,3 +43,5 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/sort_algorithms:latest
           platforms: linux/amd64,linux/arm64
+          build-args: |
+            MAKEFLAGS=-j$(nproc) V=1
