--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Build and Push Multiarch Docker image to GHCR
+name: Build and Push Docker image to GHCR
 
 on:
   push:
@@ -16,19 +16,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up QEMU emulation
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: linux/amd64,linux/arm64
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          install: true
-
-      - name: Inspect and bootstrap builder
-        run: docker buildx inspect --bootstrap
-
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -36,12 +23,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image (multiarch)
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/sort_algorithms:latest
-          platforms: linux/amd64,linux/arm64
-          build-args: |
-            MAKEFLAGS=-j$(nproc) V=1
+          platforms: linux/amd64
